--- a/AIModule.vcxproj
+++ b/AIModule.vcxproj
@@ -102,6 +102,7 @@ xcopy /Y /Q "$(ProjectDir)glew32.dll" "$(OutDir)"</Command>
     <ClCompile Include="Robot.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="TrailPoints.cpp" />
     <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
