--- a/AIModule.vcxproj.filters
+++ b/AIModule.vcxproj.filters
@@ -118,6 +118,9 @@
     <ClCompile Include="AStarSearch.cpp">
       <Filter>Main\Modules</Filter>
     </ClCompile>
+    <ClCompile Include="TrailPoints.cpp">
+      <Filter>Main\Graphics\Sprites</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="sphere.fsd">
