--- a/AIModule.vcxproj
+++ b/AIModule.vcxproj
@@ -81,6 +81,7 @@ xcopy /Y /Q "$(ProjectDir)glew32.dll" "$(OutDir)"</Command>
     <ClInclude Include="GlobalVariable.h" />
     <ClInclude Include="GMMHeap.h" />
     <ClInclude Include="GraphicsEngine.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="RigidBody.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="ModuleBase.h" />
@@ -96,6 +97,7 @@ xcopy /Y /Q "$(ProjectDir)glew32.dll" "$(OutDir)"</Command>
     <ClCompile Include="GlobalVariable.cpp" />
     <ClCompile Include="GraphicsEngine.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModuleBase.cpp" />
     <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="RigidBody.cpp" />
