Replan the path when need

--- a/AIModule.vcxproj
+++ b/AIModule.vcxproj
@@ -68,16 +68,16 @@ xcopy /Y /Q "$(ProjectDir)glew32.dll" "$(OutDir)"</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-		<AdditionalIncludeDirectories>..\..\glew1130\glew-1.13.0\include;..\..\glfw\include;..\..\glm;..\..\soil\Simple OpenGL Image Library\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\glew1130\glew-1.13.0\include;..\..\glfw\include;..\..\glm;..\..\soil\Simple OpenGL Image Library\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-		<AdditionalLibraryDirectories>..\..\glew1130\glew-1.13.0\lib\Release\Win32;..\..\glfw\src\Debug;..\..\soil\Simple OpenGL Image Library\projects\VC9\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\glew1130\glew-1.13.0\lib\Release\Win32;..\..\glfw\src\Debug;..\..\soil\Simple OpenGL Image Library\projects\VC9\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glew32.lib;glew32s.lib;glfw3.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
-	 <PostBuildEvent>
+    <PostBuildEvent>
       <Command>xcopy /Y /Q "$(ProjectDir)box.fsd" "$(OutDir)"
 xcopy /Y /Q "$(ProjectDir)box.vsd" "$(OutDir)"
 xcopy /Y /Q "$(ProjectDir)sphere.fsd" "$(OutDir)"
@@ -108,6 +108,7 @@ xcopy /Y /Q "$(ProjectDir)glew32.dll" "$(OutDir)"</Command>
     <ClCompile Include="FuzzyLogic.cpp" />
     <ClCompile Include="GlobalVariable.cpp" />
     <ClCompile Include="GraphicsEngine.cpp" />
+    <ClCompile Include="Keeper.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModuleBase.cpp" />
