--- a/AIModule.vcxproj
+++ b/AIModule.vcxproj
@@ -102,6 +102,7 @@ xcopy /Y /Q "$(ProjectDir)glew32.dll" "$(OutDir)"</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AIPotentialField.cpp" />
+    <ClCompile Include="AngularAStar.cpp" />
     <ClCompile Include="AStarSearch.cpp" />
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Camera.cpp" />
